﻿# March 2023

 • [Thor] Speed nerf 60->54, spark forkdamage nerf 0.5->0.25 (now deals 750 damage as aoe instead of 1500)
 • [Commanders] can no longer capture allied units
 • [Seaplane Platforms] added sonar distance for armada: 600, cortex: 800
 • [factories] tiny radar ranges removed + added large ranges for t1 air: 500, t2 air: 1000, armada seaplane: 750


# February 2023

 • [missiles] antinukes/nukes/tacnukes/empmissiles no longer collide into enemy (air) units
 • [Titan/Juggernaut] added foot stomp "weapon"


# January 2023

 • [vehicle scouts] accuracies and turnrate increased, damage reduced slightly. Cortex more maneuverable but slightly slower than armada, with reduced health


# December 2022

 • [catalyst] Range -18% Nerf (2750 -> 2250), Area of Effect -26% Nerf (512 -> 380), Damage +60% Buff (2500 -> 4000)


# August 2022

 • [Torpedo gunships] weapon changed to match up with other torpedos (damage and speed), accuracy and targeting improved. 


# May 2022

 • [Sniper] speed: 30->33


# March 2022

 • [Sabre] reloadtime 12% slower, range -11%
 • [Stiletto] slower turnrate, 15 -> 10 sec paralyze duration, lower flight altitude


# January 2022

 • [EMP-spider] health 850 -> 1000, increased turret turn speed
 • [T1 walls] Removed energy cost + land walls: reduced metal cost 11 -> 8
 • [T2 walls] Halved energy cost (~1000 -> 500) + rounded up metal cost 38/39 -> 40
 • [Thor] EMP missile weapon is by manual fire only


# December 2021

 • [Fido] cost: 270m->300m, 5600->6300E
 • [Sniper] speed: 35.4->30
 • [Zeus] unnerfed: dps 200->220
 • [Fatboy] cost: 1500->1400m, 12000->11000E
 • [Maverick] cost: 700->650m, 12000->11000E + range increases with experience 3x faster
 • [Recluse] health increased (1050->1250) and weapon range increased (550->600) Burst 4->3 (no dps loss)
 • [EMP-spider] now able to reclaim (100 buildpower),  cost: 175->250m, 3400->5000E


# 2019 - 2021

General
 • Enabled ground deformation