@@ -3,7 +3,7 @@ return {
 		activatewhenbuilt = true,
 		acceleration = 0.01788,
 		brakerate = 0.01788,
-		buildcostenergy = 33000,
+		buildcostenergy = 23000,
 		buildcostmetal = 1150,
 		builder = false,
 		buildpic = "ARMLUN.DDS",
@@ -137,17 +137,16 @@ return {
 				soundhitwet = "splslrg",
 				soundstart = "largegun",
 				turret = true,
-				waterweapon = true,
+				waterweapon = false,
 				weapontype = "Cannon",
 				weaponvelocity = 300,
 				customparams = {
-
 					cegtag = "missiletrailcorroyspecial",
 					def = "armlun_cannonuw",
 					model = "airbombt2",
-					speceffect = "cannonwaterpen",
-					waterpenceg = "genericshellexplosion-medium",
-					when = "ypos<0",
+					--speceffect = "cannonwaterpen",
+					--waterpenceg = "genericshellexplosion-medium",
+					--when = "ypos<0",
 				},
 				damage = {
 					bombers = 60,
@@ -234,14 +233,57 @@ return {
 					vtol = 35,
 				},
 			},
+			depthcharge = {
+				areaofeffect = 24,
+				avoidfeature = false,
+				avoidfriendly = false,
+				burnblow = true,
+				collidefriendly = false,
+				craterareaofeffect = 0,
+				craterboost = 0,
+				cratermult = 0,
+				edgeeffectiveness = 0.9,
+				explosiongenerator = "custom:genericshellexplosion-medium-uw",
+				flighttime = 3,
+				impulseboost = 0.123,
+				impulsefactor = 0.123,
+				model = "cordepthcharge.s3o",
+				name = "Depthcharge launcher",
+				noselfdamage = true,
+				predictboost = 0,
+				range = 400,
+				reloadtime = 2, --2.5,
+				soundhit = "xplodep2",
+				soundstart = "torpedo1",
+				startvelocity = 120,
+				tolerance = 1000,
+				tracks = true,
+				turnrate = 6000,
+				turret = true,
+				waterweapon = true,
+				weaponacceleration = 20,
+				weapontimer = 3,
+				weapontype = "TorpedoLauncher",
+				weaponvelocity = 140,
+				damage = {
+					default = 225,
+				},
+			},
 		},
 		weapons = {
 			[1] = {
 				badtargetcategory = "VTOL",
 				def = "CANNON",
-				maindir = "0 1 0",
-				maxangledif = 270,
-				onlytargetcategory = "NOTSUB",
+				--maindir = "0 1 0",
+				--maxangledif = 270,
+				onlytargetcategory = "SURFACE",
+			},
+			[2] = {
+				badtargetcategory = "NOTSUB",
+				def = "DEPTHCHARGE",
+				maindir = "0 -1 0",
+				maxangledif = 179,
+				onlytargetcategory = "CANBEUW UNDERWATER",
 			},
 		},
 	},
