@@ -3,7 +3,7 @@ return {
 		activatewhenbuilt = true,
 		acceleration = 0.01731,
 		brakerate = 0.01731,
-		buildcostenergy = 12000,
+		buildcostenergy = 19000,
 		buildcostmetal = 950,
 		builder = false,
 		buildpic = "CORSOK.DDS",
@@ -35,7 +35,7 @@ return {
 		script = "Units/corsok.cob",
 		selfdestructas = "hugeExplosionGenericSelfd",
 		sightdistance = 650,
-		sonardistance = 700,
+		sonardistance = 550,
 		turninplace = true,
 		turninplaceanglelimit = 90,
 		turninplacespeedlimit = 1.056,
@@ -156,12 +156,55 @@ return {
 					subs = 1000,
 				},
 			},
+			depthcharge = {
+				areaofeffect = 24,
+				avoidfeature = false,
+				avoidfriendly = false,
+				burnblow = true,
+				collidefriendly = false,
+				craterareaofeffect = 0,
+				craterboost = 0,
+				cratermult = 0,
+				edgeeffectiveness = 0.9,
+				explosiongenerator = "custom:genericshellexplosion-medium-uw",
+				flighttime = 3,
+				impulseboost = 0.123,
+				impulsefactor = 0.123,
+				model = "cordepthcharge.s3o",
+				name = "Depthcharge launcher",
+				noselfdamage = true,
+				predictboost = 0,
+				range = 400,
+				reloadtime = 2, --2.5,
+				soundhit = "xplodep2",
+				soundstart = "torpedo1",
+				startvelocity = 120,
+				tolerance = 1000,
+				tracks = true,
+				turnrate = 6000,
+				turret = true,
+				waterweapon = true,
+				weaponacceleration = 20,
+				weapontimer = 3,
+				weapontype = "TorpedoLauncher",
+				weaponvelocity = 140,
+				damage = {
+					default = 225,
+				},
+			},
 		},
 		weapons = {
 			[1] = {
 				badtargetcategory = "VTOL",
 				def = "CORSOK_LASER",
 				onlytargetcategory = "NOTSUB",
+			},
+			[2] = {
+				badtargetcategory = "NOTSUB",
+				def = "DEPTHCHARGE",
+				maindir = "0 -1 0",
+				maxangledif = 179,
+				onlytargetcategory = "CANBEUW UNDERWATER",
 			},
 		},
 	},
